--- a/po/it.po
+++ b/po/it.po
@@ -4,14 +4,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-10-02 15:44-0300\n"
-"PO-Revision-Date: 2013-08-07 08:05-0400\n"
+"POT-Creation-Date: 2012-06-27 12:35-0400\n"
+"PO-Revision-Date: 2013-09-17 06:33-0400\n"
 "Last-Translator: fvalen <fvalen@fedoraproject.org>\n"
 "Language-Team: Italian\n"
-"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: it\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "X-Generator: Zanata 2.2.2\n"
 
@@ -305,7 +305,8 @@ msgstr ""
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:374
 msgid "A unit type of 'person' cannot be used with activation keys"
 msgstr ""
-"Una unità di tipo 'persona' non può essere usata con le chiavi di attivazione"
+"Una unità di tipo 'persona' non può essere usata con le chiavi di "
+"attivazione"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -355,17 +356,17 @@ msgstr ""
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:611
 #, java-format
 msgid "User with ID ''{0}'' could not be found."
-msgstr ""
+msgstr "Utente con ID ''{0}'' non trovato."
 
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:618
 #, java-format
 msgid "User ''{0}'' has no roles for organization ''{1}''"
-msgstr ""
+msgstr "Utente \"{0}\" non ha alcun ruolo per l''organizzazione \"{1}\""
 
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:630
 #, java-format
 msgid "User ''{0}'' has already registered a personal consumer"
-msgstr ""
+msgstr "L''utente \"{0}\" ha già registrato un utente personale"
 
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:647
 msgid "You must specify an organization for new units."
@@ -381,17 +382,17 @@ msgstr "L''organizzazione {0} non esiste."
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:666
 #, java-format
 msgid "User ''{0}'' cannot access organization ''{1}''."
-msgstr ""
+msgstr "L''utente ''{0}'' non può accedere all''organizzazione ''{1}''."
 
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:728
 #, java-format
 msgid "Unit type ''{0}'' could not be found."
-msgstr ""
+msgstr "Impossibile trovare il tipo di unità \"{0}\"."
 
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:814
 #, java-format
 msgid "Environment with ID ''{0}'' could not be found."
-msgstr ""
+msgstr "Ambiente con ID ''{0}'' non trovato."
 
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:1124
 #, java-format
@@ -428,7 +429,7 @@ msgstr ""
 #: src/main/java/org/candlepin/resource/EntitlementResource.java:141
 #, java-format
 msgid "Unit with ID ''{0}'' could not be found."
-msgstr ""
+msgstr "Unità con ID ''{0}'' non trovata."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author fvalen
@@ -445,12 +446,14 @@ msgstr "Impossibile trovare un entitlement con ID ''{0}''."
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:1518
 #, java-format
 msgid "Product with ID ''{0}'' could not be found."
-msgstr ""
+msgstr "Impossibile trovare il prodotto con ID ''{0}''."
 
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:1631
 #, java-format
 msgid "Entitlement Certificate with serial number ''{0}'' could not be found."
 msgstr ""
+"Impossibile trovare un Certificato dell'entitlement con numero di serie "
+"\"{0}\"."
 
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:1694
 #, java-format
@@ -481,20 +484,22 @@ msgstr "Il sistema con UUID {0} non è un guest virtuale."
 #, java-format
 msgid "Deletion record for hypervisor ''{0}'' not found."
 msgstr ""
+"Impossibile trovare le informazioni sulla rimozione per l'Hypervisor "
+"''{0}''."
 
 #: src/main/java/org/candlepin/resource/EntitlementResource.java:91
 #, java-format
 msgid "Object with ID ''{0}'' could not found."
-msgstr ""
+msgstr "Oggetto con ID ''{0}'' non trovato."
 
 #: src/main/java/org/candlepin/resource/EntitlementResource.java:119
 #, java-format
 msgid "Unit ''{0}'' has no subscription for product ''{1}''."
-msgstr ""
+msgstr "L'Unità ''{0}'' non ha alcuna sottoscrizione per il prodotto ''{1}''."
 
 #: src/main/java/org/candlepin/resource/EntitlementResource.java:194
 msgid "Quantity value must be greater than 0."
-msgstr ""
+msgstr "Il valore relativo alla Quantità deve essere maggiore di 0."
 
 #: src/main/java/org/candlepin/resource/ProductResource.java:121
 #: src/main/java/org/candlepin/resource/ProductResource.java:140
@@ -534,8 +539,8 @@ msgid ""
 "Cannot add pools that are restricted to unit type 'person' to activation "
 "keys."
 msgstr ""
-"Impossibile aggiungere i pool limitati al tipo di unità 'person' alle chiavi "
-"di attivazione."
+"Impossibile aggiungere i pool limitati al tipo di unità 'person' alle chiavi"
+" di attivazione."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author fvalen
@@ -545,8 +550,8 @@ msgid ""
 "to the activation key with a quantity greater than one."
 msgstr ""
 "Errore: Solo i pool con sottoscrizioni al prodotto con entitlement multipli "
-"possono essere aggiunti alla chiave di attivazione con una quantità maggiore "
-"di uno."
+"possono essere aggiunti alla chiave di attivazione con una quantità maggiore"
+" di uno."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author fvalen
@@ -557,8 +562,8 @@ msgstr "La quantità non deve superare quella permessa al pool"
 #: src/main/java/org/candlepin/resource/ActivationKeyResource.java:163
 msgid "Activation keys can only use host restricted pools from a single host."
 msgstr ""
-"Le chiavi di attivazione possono usare solo i pool limitati dagli host di un "
-"host singolo."
+"Le chiavi di attivazione possono usare solo i pool limitati dagli host di un"
+" host singolo."
 
 #: src/main/java/org/candlepin/resource/ActivationKeyResource.java:224
 #, java-format
@@ -721,8 +726,8 @@ msgstr "Errore nella lettura dell'archivio di esportazione"
 #, java-format
 msgid "Problem generating ueber cert for owner {0}"
 msgstr ""
-"Problemi durante la generazione di un euber cert (certificato master) per il "
-"proprietario {0}"
+"Problemi durante la generazione di un euber cert (certificato master) per il"
+" proprietario {0}"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author fvalen
@@ -865,7 +870,7 @@ msgstr "Impossibile trovare il tipo di unità con id {0}."
 #: src/main/java/org/candlepin/resource/DistributorVersionResource.java:104
 #, java-format
 msgid "A distributor version with name {0} already exists"
-msgstr ""
+msgstr "Una versione del distributore con nome {0} è già esistente"
 
 #: src/main/java/org/candlepin/resource/DistributorVersionResource.java:132
 #, java-format
@@ -1091,8 +1096,8 @@ msgstr "Errore durante l'acquisizione della chiave unità oauth"
 #, java-format
 msgid ""
 "Too many content sets for certificate {0}. A newer client may be available "
-"to address this problem. See kbase https://access.redhat.com/knowledge/"
-"node/129003 for more information."
+"to address this problem. See kbase "
+"https://access.redhat.com/knowledge/node/129003 for more information."
 msgstr ""
 "Troppi set del contenuto per il certificato {0}. Per risolvere questo "
 "problema può essere disponibile un nuovo client. Per maggiori informazioni "
@@ -1114,7 +1119,8 @@ msgstr "Il pool di sottoscrizione {0} non esiste."
 #: src/main/java/org/candlepin/controller/Entitler.java:107
 #, java-format
 msgid ""
-"This unit has already had the subscription matching pool ID ''{0}'' attached."
+"This unit has already had the subscription matching pool ID ''{0}'' "
+"attached."
 msgstr ""
 "È già stato assegnato a questa unità il  pool ID ''{0}'' della "
 "sottoscrizione corrispondente."
@@ -1207,7 +1213,8 @@ msgstr ""
 #: src/main/java/org/candlepin/controller/Entitler.java:194
 #, java-format
 msgid "Unable to adjust quantity for the entitlement with id ''{0}'': {1}"
-msgstr "Impossibile regolare la quantità per l'entitlement con id ''{0}'': {1}"
+msgstr ""
+"Impossibile regolare la quantità per l'entitlement con id ''{0}'': {1}"
 
 #: src/main/java/org/candlepin/controller/Entitler.java:270
 #, java-format
@@ -1272,8 +1279,8 @@ msgstr "L'attributo ''{0}'' deve essere un valore booleano."
 msgid ""
 "You cannot create a circular reference for products that ''{0}'' relies on."
 msgstr ""
-"Non è possibile creare un riferimento circolare con i prodotti utilizzati da "
-"''{0}''"
+"Non è possibile creare un riferimento circolare con i prodotti utilizzati da"
+" ''{0}''"
 
 #: src/main/java/org/candlepin/model/ConsumerCurator.java:100
 #, java-format
