--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -6,14 +6,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-10-02 15:44-0300\n"
-"PO-Revision-Date: 2013-08-07 10:42-0400\n"
-"Last-Translator: Chester Cheng <ccheng@redhat.com>\n"
+"POT-Creation-Date: 2012-06-27 12:35-0400\n"
+"PO-Revision-Date: 2013-09-17 08:13-0400\n"
+"Last-Translator: tchuang <tchuang@redhat.com>\n"
 "Language-Team: Chinese (Traditional, Taiwan)\n"
-"Language: zh-Hant-TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: zh-Hant-TW\n"
 "Plural-Forms: nplurals=1; plural=0\n"
 "X-Generator: Zanata 2.2.2\n"
 
@@ -349,17 +349,17 @@ msgstr "找不到組織「{1}」的啟動金鑰「{0}」。"
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:611
 #, java-format
 msgid "User with ID ''{0}'' could not be found."
-msgstr ""
+msgstr "找不到 ID 為「{0}」的使用者。"
 
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:618
 #, java-format
 msgid "User ''{0}'' has no roles for organization ''{1}''"
-msgstr ""
+msgstr "使用者「{0}」在組織「{1}」中沒有角色"
 
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:630
 #, java-format
 msgid "User ''{0}'' has already registered a personal consumer"
-msgstr ""
+msgstr "使用者 {0} 已註冊為個人使用者"
 
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:647
 msgid "You must specify an organization for new units."
@@ -375,17 +375,17 @@ msgstr "組織 {0} 不存在。"
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:666
 #, java-format
 msgid "User ''{0}'' cannot access organization ''{1}''."
-msgstr ""
+msgstr "使用者「{0}」無法存取組織「{1}」。"
 
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:728
 #, java-format
 msgid "Unit type ''{0}'' could not be found."
-msgstr ""
+msgstr "找不到類型為「{0}」的單位。"
 
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:814
 #, java-format
 msgid "Environment with ID ''{0}'' could not be found."
-msgstr ""
+msgstr "找不到 ID 為「{0}」的環境。"
 
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:1124
 #, java-format
@@ -419,7 +419,7 @@ msgstr "無法為一個無集區的產品連接訂閱：{0} "
 #: src/main/java/org/candlepin/resource/EntitlementResource.java:141
 #, java-format
 msgid "Unit with ID ''{0}'' could not be found."
-msgstr ""
+msgstr "找不到 ID 為「{0}」的單位。"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author snowlet
@@ -431,17 +431,17 @@ msgstr ""
 #: src/main/java/org/candlepin/resource/EntitlementResource.java:259
 #, java-format
 msgid "Entitlement with ID ''{0}'' could not be found."
-msgstr "找不到擁有 ID「{0}」的權利。"
+msgstr "找不到 ID 為「{0}」的權利。"
 
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:1518
 #, java-format
 msgid "Product with ID ''{0}'' could not be found."
-msgstr ""
+msgstr "找不到 ID 為「{0}」的產品。"
 
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:1631
 #, java-format
 msgid "Entitlement Certificate with serial number ''{0}'' could not be found."
-msgstr ""
+msgstr "找不到序號為「{0}」的權利憑證。"
 
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:1694
 #, java-format
@@ -459,7 +459,7 @@ msgstr "無法建立 export 封存"
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:1784
 #, java-format
 msgid "Problem regenerating ID cert for unit {0}"
-msgstr "嘗試為單位 {0} 產生 ID 認證時發生了問題"
+msgstr "嘗試為單位 {0} 產生 ID 憑證時發生了問題"
 
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:1823
 #, java-format
@@ -469,21 +469,21 @@ msgstr "擁有 UUID {0} 的系統不是虛擬客座端。"
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:1929
 #, java-format
 msgid "Deletion record for hypervisor ''{0}'' not found."
-msgstr ""
+msgstr "找不到 hypervisor「{0}」的刪除紀錄。"
 
 #: src/main/java/org/candlepin/resource/EntitlementResource.java:91
 #, java-format
 msgid "Object with ID ''{0}'' could not found."
-msgstr ""
+msgstr "找不到 ID 為「{0}」的物件。"
 
 #: src/main/java/org/candlepin/resource/EntitlementResource.java:119
 #, java-format
 msgid "Unit ''{0}'' has no subscription for product ''{1}''."
-msgstr ""
+msgstr "單位「{0}」的產品「{1}」沒有訂閱服務。"
 
 #: src/main/java/org/candlepin/resource/EntitlementResource.java:194
 msgid "Quantity value must be greater than 0."
-msgstr ""
+msgstr "數量值必須大於零。"
 
 #: src/main/java/org/candlepin/resource/ProductResource.java:121
 #: src/main/java/org/candlepin/resource/ProductResource.java:140
@@ -573,7 +573,7 @@ msgstr "無法讀取規則檔案"
 #: src/main/java/org/candlepin/resource/SubscriptionResource.java:122
 #, java-format
 msgid "no certificate for subscription {0}"
-msgstr "訂閱服務 {0} 沒有認證"
+msgstr "訂閱服務 {0} 沒有憑證"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author snowlet
@@ -694,14 +694,14 @@ msgstr "讀取 export 封存時發生了錯誤"
 #: src/main/java/org/candlepin/resource/OwnerResource.java:1191
 #, java-format
 msgid "Problem generating ueber cert for owner {0}"
-msgstr "為擁有者 {0} 產生 ueber 認證時發生問題"
+msgstr "為擁有者 {0} 產生 ueber 憑證時發生問題"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author snowlet
 #: src/main/java/org/candlepin/resource/OwnerResource.java:1217
 #, java-format
 msgid "ueber certificate for owner {0} was not found. Please generate one."
-msgstr "找不到擁有者 {0} 的 ueber 認證。請產生一組認證。"
+msgstr "找不到擁有者 {0} 的 ueber 憑證。請產生一組憑證。"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author snowlet
@@ -833,7 +833,7 @@ msgstr "找不到 id 為 {0} 的單位類型。"
 #: src/main/java/org/candlepin/resource/DistributorVersionResource.java:104
 #, java-format
 msgid "A distributor version with name {0} already exists"
-msgstr ""
+msgstr "名為 {0} 的散佈版本已經存在"
 
 #: src/main/java/org/candlepin/resource/DistributorVersionResource.java:132
 #, java-format
@@ -1054,11 +1054,11 @@ msgstr "嘗試取得 oauth 單位金鑰時發生了錯誤"
 #, java-format
 msgid ""
 "Too many content sets for certificate {0}. A newer client may be available "
-"to address this problem. See kbase https://access.redhat.com/knowledge/"
-"node/129003 for more information."
+"to address this problem. See kbase "
+"https://access.redhat.com/knowledge/node/129003 for more information."
 msgstr ""
-"憑證 {0} 擁有過多的內容集。您可使用更新的客戶端來解決此問題。欲取得更多相關資"
-"訊，請查看 kbase https://access.redhat.com/knowledge/node/129003。"
+"憑證 {0} 擁有過多的內容集。您可使用更新的客戶端來解決此問題。欲取得更多相關資訊，請查看 kbase "
+"https://access.redhat.com/knowledge/node/129003。"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author snowlet
@@ -1076,7 +1076,8 @@ msgstr "訂閱集區 {0} 不存在。"
 #: src/main/java/org/candlepin/controller/Entitler.java:107
 #, java-format
 msgid ""
-"This unit has already had the subscription matching pool ID ''{0}'' attached."
+"This unit has already had the subscription matching pool ID ''{0}'' "
+"attached."
 msgstr "這單位已經有訂閱相符集區 ID「{0}」相連。"
 
 #: src/main/java/org/candlepin/controller/Entitler.java:112
